--- a/EBD/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/EBD/en.lproj/MainStoryboard_iPhone.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="999" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gmZ-Dq-uSk">
+                            <adBannerView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="999" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gmZ-Dq-uSk">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="dIZ-TV-DYW"/>
                                 </constraints>
